--- a/post.html
+++ b/post.html
@@ -19,7 +19,7 @@
         </nav>
     <hr>
     </header>
-    <form name="post">
+    <form name="post" id="postForm">
         <label for="location">Bar Location: </label>
         <input type="text" id="location" name="location">
         <br>
@@ -35,5 +35,6 @@
         <br>
         <input type="submit" value="Post event!">
     </form>
+<script src="user-post.js"></script>
 </body>
 </html>
