--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
         </nav>
     <hr>
     </header>
-    <form name="login">
+    <form name="login" id="loginForm">
         <label for="email">Email: </label>
         <input type="email" id="email" name="email">
         <br>
@@ -29,5 +29,6 @@
         <br>
         <input type="submit" value="Login">
     </form>
+<script src="user-login.js"></script>
 </body>
 </html>
