--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
     <hr>
     </header>
     
-    <form name="register">
+    <form name="register" id="regForm">
         <img class="bartenders-pic" src="/images/bartenders.jpg">
         <label for="firstname">First Name: </label>
         <input type="text" id="firstname" name="firstname">
@@ -42,5 +42,6 @@
         <br>
         <input type="submit" value="Register now!">
     </form>
+    <script src="user-register.js"></script>
 </body>
 </html>
