Updated server/router folders December 14

--- a/public/post.html
+++ b/public/post.html
@@ -35,6 +35,6 @@
         <br>
         <input type="submit" value="Post event!">
     </form>
-<script src="user-post.js"></script>
+<script src="./scripts/user-post.js"></script>
 </body>
 </html>
