--- a/public/register.html
+++ b/public/register.html
@@ -42,6 +42,6 @@
         <br>
         <input type="submit" value="Register now!">
     </form>
-    <script src="user-register.js"></script>
+    <script src="./scripts/user-register.js"></script>
 </body>
 </html>
