--- a/public/login.html
+++ b/public/login.html
@@ -29,6 +29,6 @@
         <br>
         <input type="submit" value="Login">
     </form>
-<script src="user-login.js"></script>
+<script src="./scripts/user-login.js"></script>
 </body>
 </html>
